@@ -29,6 +29,7 @@ Others:
 - Automatically replace space by %20 in img url in HTML
 - Ansicat: HTML Render img with data-src if src doesn’t link to a valid image
 - Opnk: fix a crash when trying to cache-clean uncached url (such as images)
+- added mime-type "application/pgp-keys" as to be opened by TextRenderer
 
 ## 2.8 - November 13th 2025
 - New option "images_size" to use with "set" (idea by aelius)
